codepkg/objects/UnuverEmployee__c.object
<CustomObject>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniverDepartment__c</fullName>
        <label>UniverDepartment</label>
        <referenceTo>UnuverDepartment__c</referenceTo>
        <relationshipLabel>UniverEmployees</relationshipLabel>
        <relationshipName>UniverEmployees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <label>University</label>
        <referenceTo>University__c</referenceTo>
        <relationshipLabel>UniverEmployees</relationshipLabel>
        <relationshipName>UniverEmployees</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>UnuverEmployee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>UnuverEmployee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UniverEmployees</pluralLabel>
    <recordTypes>
        <fullName>Manage_Personal</fullName>
        <active>true</active>
        <label>Manage Personal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher</fullName>
        <active>true</active>
        <label>Teacher</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>